# actNOW

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  manage.py  nginx.conf.sigil  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: PR.yml  main.yml  pull_request.yml
accounts/: admin.py  forms.py
accounts/migrations/: 0001_initial.py
actnow/: asgi.py  health.py  metrics.py  settings.py  storages_backends.py  summary.py  token.py  urls.py  wsgi.py
actnow/accounts/: admin.py  apps.py  authentication.py  models.py  oauth_validators.py  permissions.py  serializers.py  signals.py  tokens.py  urls.py  utils.py  views.py  viewsets.py
actnow/accounts/migrations/: 0001_initial.py  0002_actnow_user_match_abstract_user.py  0003_alter_actnowuser_email.py  0004_timestamp_models.py  0005_actnowapplication.py  0006_add_is_deleted_attribute.py  0007_alter_actnowuser_username_blank.py  0007_dot_models.py
actnow/accounts/templates/: login.html
actnow/accounts/tests/: test_models.py  test_serializers.py  test_views.py
actnow/db/: apps.py
actnow/petitions/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py  viewsets.py
actnow/petitions/migrations/: 0001_initial.py  0002_add_issue_to_pettition.py  0002_add_source_to_pettition.py  0002_auto_20210616_0953.py  0002_auto_20210617_0714.py  0002_signature_sign_anonymously.py  0003_alter_petitionsignature_signator.py  0003_petition_followers.py  0004_auto_20210616_1439.py  0004_petition_owner_followers_signatory.py  0005_auto_20210616_1636.py
actnow/petitions/tests/: test_models.py  test_views.py
actnow/profiles/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
actnow/profiles/migrations/: 0001_initial.py  0002_organisation.py  0002_organisationprofile.py  0003_profile_fields.py  0004_timestamp_models.py  0005_alter_organisationprofile_persons.py  0006_auto_20210701_1251.py  0007_alter_model_blank_charfields.py  0008_reorganise_profile.py  0009_rename_about_me.py  0010_profile.py  0011_profile_data.py  0012_alter_organisationprofile_owners.py
actnow/profiles/tests/: model_factory.py  test_models.py  test_views.py
actnow/site/: apps.py  views.py
actnow/site/templates/: index.html
actnow/social/: serializers.py  urls.py  views.py
contrib/docker/: cmd.sh
contrib/docker-compose/nginx/: default.conf
profiles/: backends.py
templates/: _base.html
templates/oauth2_provider/: authorize.html
templates/registration/: login.html
