[metadata]
name = actnow
version = file: VERSION.txt
url = https://github.com/CodeForAfrica/actNow
project_urls =
    Source = https://github.com/CodeForAfrica/actNow
author = Code for Africa
author_email = tech@codeforafrica.org
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Flake8
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
license = BSD 3-Clause License
license_file = LICENSE
description = A public engagement toolkit that enables a media house or civil society organisation to easily set up channels for engagement.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = actnow

[options]
setup_requires = setuptools_scm
install_requires =
    Django==3.2
    django-filter==22.1
    djangorestframework==3.13.1
    environs[django]==9.5.0
    greenlet==1.1.2
    gunicorn[gevent,setproctitle]==20.1
    markdown==3.4.1
python_requires = >=3.8, <4
packages = find:

[options.extras_require]
sentry =
    sentry-sdk==1.9.0
dev =
    black==22.6.0
    build==0.8.0
    flake8==5.0.1
    isort==5.10.1
    mypy==0.971
    mypy-extensions==0.4
    pre-commit==2.20.0
    psycopg2-binary==2.9.3
    setuptools==63.2.0
    wheel==0.37.1


[flake8]
max-line-length = 88
extend-ignore = E203, W503
