[metadata]
name = actnow
version = file: VERSION.txt
url = https://github.com/CodeForAfrica/actNow
project_urls =
    Source = https://github.com/CodeForAfrica/actNow
author = Code for Africa
author_email = tech@codeforafrica.org
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Flake8
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
license = BSD 3-Clause License
license_file = LICENSE
description = A public engagement toolkit that enables a media house or civil society organisation to easily set up channels for engagement.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = actnow

[options]
setup_requires = setuptools_scm
install_requires =
    Django==3.2
    django-filter==23.5
    djangorestframework==3.14.0
    environs[django]==10.3.0
    greenlet==3.0.3
    gunicorn[gevent,setproctitle]==21.2.0
    markdown==3.5.2
python_requires = >=3.8, <4
packages = find:

[options.extras_require]
sentry =
    sentry-sdk==1.32.0
dev =
    black==24.1.1
    build==1.0.3
    flake8==5.0.4
    isort==5.13.2
    mypy==1.8.0
    mypy-extensions==1.0.0
    pre-commit==3.5.0
    psycopg2-binary==2.9.9
    setuptools==68.2.2
    wheel==0.42.0


[flake8]
max-line-length = 88
extend-ignore = E203, W503
